Xfce 4.6beta2 (Xfce 4.5.92):
----------------------------

  * Display 'Audio' and 'Video' categories in the multimedia submenu.
  * Fix multiple image selection in settings dialog file chooser (bug 4522).


Xfce 4.6beta1 (Xfce 4.5.91):
----------------------------

  * Bring back the "show icons in menu" preferences for the desktop
    menu and window list menu.
  * Add support for XDG user dirs for the Desktop and Templates
    directories.  Patch from Andrea Santilli <yawara@quipo.it> (bug 4365).
  * Fix xfdesktop/xfce menu crashing when installing new applications that
    install .desktop files and icons (bug 3615).
  * Fix occasional "double menu" after menu/icon files change on disk
    (bug 4342).
  * Implement "rubber banding" for the desktop icon view (bug 3245).
  * Honor the Hidden=, OnlyShowIn=, and NeverShowIn= keys in .desktop
    files in the desktop folder (bug 4022).
  * Fix window menu popping up even after last window icon was
    de-selected when using minimized app icons.
  * Display 'Eject' in the context menu for removable drives that
    support eject, not just optical discs (bug 3738).
  * Fix memory leak (not freeing result of gtk_container_get_children()
    in the desktop menu code).
  * Fix memory/X window leak (not destroying menu in panel plugin after
    it's closed; old menu didn't require it, but new one does).
  * Use GtkFileChooserButtons in the panel plugin config dialog instead
    of entry box + button, and remove the 'Edit menu' button/menu item
    since we don't have a menu editor anymore.
  * Add cell-spacing, cell-padding, and cell-text-width-proportion
    stlye properties to XfdesktopIconView to control spacing/sizing of
    the icon grid (bug 2886).  Patch from Giacomo Lozito.
  * Add the ellipsize-icon-labels style property  to control whether
    or not unselected icons get their labels truncated (bug 2886).
    Patch from Daniel Gibson.
  * Add style properties to enable painting a text shadow 'under' the