@@ -1,3 +1,9 @@
+Xfce 4.6beta3 (Xfce 4.5.93):
+----------------------------
+
+  * Avoid an infinite loop if all files in a backdrop list are invalid.
+
+
 Xfce 4.6beta2 (Xfce 4.5.92):
 ----------------------------
 
